--- a/google_appengine/usuarios/app.yaml
+++ b/google_appengine/usuarios/app.yaml
@@ -1,17 +1,11 @@
-application: salute
+application: usuarios
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /
-  static_files: index.html
-  upload: index\.html
 
-- url: /index2.html
-  static_files: index2.html
-  upload: index2\.html
 
 - url: /favicon\.ico
   static_files: favicon.ico
@@ -23,5 +17,3 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
-- name: jinja2
-  version: "2.6"
