mejora de interfaz con bootstrap

--- a/google_appengine/proyecto/app.yaml
+++ b/google_appengine/proyecto/app.yaml
@@ -16,6 +16,10 @@ handlers:
 - url: /entitys
   static_dir: entitys
 
+- url: /bootstrap
+  static_dir: bootstrap
+  
+
 - url: .*
   script: main.app
 
