--- a/google_appengine/pruebas/app.yaml
+++ b/google_appengine/pruebas/app.yaml
@@ -1,20 +1,21 @@
-application: proyecto
+application: app
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /
+  static_files: index.html
+  upload: index\.html
 
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /templates
-  static_dir: templates
-
-- url: /entitys
-  static_dir: entitys
+- url: /bootstrap
+  static_dir: bootstrap
+  
 
 - url: .*
   script: main.app
@@ -22,5 +23,3 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
-- name: jinja2
-  version: "2.6"
